--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -15,6 +15,7 @@ body {
   color: #708871;
 }
 
+/* All the responsive UI styles are listed here. */
 @media (max-width: 768px) {
   .container {
     padding: 10rem !important;
